# graphkernels-review

./: .gitignore  LICENSE  Pipfile  README.md  analyse.py  convert_to_igraph.py  create_kernel_matrices.py  pyproject.toml  results.dvc  run.sh  submit_jobs.sh  train.py
.dvc/: config
data/: convert_to_text  create_kernel_matrices
results/: Accuracies.csv  Accuracies_filtered.csv  Accuracies_with_sdev.csv  Distances_Hamming.csv  auroc_filtered.csv  auroc_with_sdev.csv
results_deprecated/: Accuracies_filtered.csv  Accuracies_with_sdev.csv  auroc.csv
src/: analyse.py  analyse_class_imbalance.py  analyse_multiple.py  assess_difficulty.py  calculate_ranks.py  calculate_runtime.sh  cat_matrices.py  collect_accuracies.py  collect_accuracies_with_sdev.py  collect_accuracies_with_sdev_by_kernel.py  collect_predictions.py  collect_runtimes.py  compare_baselines.py  convert_to_igraph.py  convert_to_text  convert_to_text.py  count_graph_labels.py  count_node_labels.py  count_overlaps.py  count_winners.py  count_winners_per_category.py  create_chapter_4_plots.sh  create_kernel_matrices.py  create_kernel_matrices_benchmark.py  create_mlg_matrices.sh  create_mp_matrix.sh  embed_kernel_predictions.py  estimate_ranks.py  extract_average_depth.py  filter_data_sets.py  get_best_accuracy.py  grakel_create_kernel_matrices.py  grakel_util.py  make_critical_difference_plot.R  make_critical_difference_plot_filtered.R  make_dendrograms.R  make_difficulty_table.py  make_ensemble_predictions.py  make_prediction_plot.py  partition_by_type.py  (+19 more)
