[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Bastian Rieck <bastian.rieck@bsse.ethz.ch>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
scikit-learn = "^0.22.2"
tqdm = "^4.43.0"
tabulate = "^0.8.6"
pandas = "^1.0.2"
grakel = "^0.1b7"
python-igraph = "^0.8.3"
dvc = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
